--- a/source/index.html
+++ b/source/index.html
@@ -37,13 +37,11 @@
         <section class="promo">
           <div class="promo__inner">
             <picture class="promo__picture">
-              <!-- <source media="(min-width: 1200px)" srcset="img/text-index-tablet.svg">
-              <source media="(min-width: 768px)" srcset="img/text-index-tablet.svg"> -->
               <img class="promo__img" src="img/text-index.svg" alt="Название">
             </picture>
           </div>
           <div class="promo__description">
-            <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающего большего</h2>
+            <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающего большего!</h2>
             <p class="promo__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
         </section>
@@ -54,13 +52,11 @@
           <ul class="reasons__list">
             <li class="reasons__item reasons__item--first">
 
-              <article class="reason-card">
+              <article class="reason-card reason-card--first">
                 <div class="reason-card__description">
-                  <div class="reason-card__inner">
-                    <h2 class="reason-card__title">Настоящий городок</h2>
-                    <p class="reason-card__number">&#8212;№1&#8212;</p>
-                    <p class="reason-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-                  </div>
+                  <h2 class="reason-card__title">Настоящий городок</h2>
+                  <p class="reason-card__number">&#8212;№1&#8212;</p>
+                  <p class="reason-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
                 </div>
                 <picture class="reason-card__picture">
                   <source media="(min-width: 1200px)" srcset="img/photo-city-desktop@1x.jpg 1x,img/photo-city-desktop@2x.jpg 2x">
@@ -90,11 +86,9 @@
             <li class="reasons__item reasons__item--second">
               <article class="reason-card reason-card--second">
                 <div class="reason-card__description">
-                  <div class="reason-card__inner">
-                    <h2 class="reason-card__title">Там есть мост дьявола</h2>
-                    <p class="reason-card__number">&#8212;№2&#8212;</p>
-                    <p class="reason-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                  </div>
+                  <h2 class="reason-card__title">Там есть мост дьявола</h2>
+                  <p class="reason-card__number">&#8212;№2&#8212;</p>
+                  <p class="reason-card__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
                 </div>
                 <picture class="reason-card__picture">
                   <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
@@ -139,7 +133,7 @@
         <section class="offers">
           <div class="offers__inner">
             <h2 class="offers__title">Заинтересовались?</h2>
-            <p class="offers__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <p class="offers__text">Укажите предполагаемые даты поездки,<br class="small-hidden"> и мы покажем вам лучшие предложения гостиниц в седоне</p>
             <a class="offers__button button" aria-label="Найти гостиницу" href="#">Найти гостиницу</a>
           </div>
         </section>
